<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_size" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/v_70"
        android:background="@color/white">

        <com.linyi.viva.extra.ui.weidgt.IconTextView
            style="@style/item_setup"
            android:text="@string/avatar"
            android:layout_gravity="center_vertical"
            app:show_bottom_line="false"
            />
        
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/v_50"
            android:layout_height="@dimen/v_50"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/h_40"
            android:src="@mipmap/ic_avatar_default"
            />
        
    </FrameLayout>

    <View style="@style/line" />

    <com.linyi.viva.extra.ui.weidgt.IconTextView
        android:id="@+id/nickname"
        style="@style/item_setup"
        android:text="@string/nickname"
        />

    <com.linyi.viva.extra.ui.weidgt.IconTextView
        android:id="@+id/sex"
        style="@style/item_setup"
        android:text="@string/sex"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_size" />

    <com.linyi.viva.extra.ui.weidgt.IconTextView
        android:id="@+id/tel"
        style="@style/item_setup"
        android:text="@string/tel"
        />

    <com.linyi.viva.extra.ui.weidgt.IconTextView
        android:id="@+id/qq"
        style="@style/item_setup"
        android:text="@string/qq"
        />

    <com.linyi.viva.extra.ui.weidgt.IconTextView
        android:id="@+id/wechat"
        style="@style/item_setup"
        android:text="@string/wechat"
        />

</LinearLayout>
