<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.linyi.viva.extra.ui.activity.AccountCenterActivity">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/coin"
            style="@style/wrap_wrap"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_36"
            android:layout_marginTop="@dimen/v_50"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            />

        <TextView style="@style/wrap_wrap"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_15"
            android:layout_marginTop="@dimen/v_17"
            android:layout_gravity="center_horizontal"
            android:text="@string/coin"
            />

        <org.linyi.ui.text.StateButton
            android:id="@+id/handle_task"
            android:clickable="true"
            style="@style/btn_primary_semicircle"
            android:layout_marginLeft="@dimen/h_90"
            android:layout_marginRight="@dimen/h_90"
            android:layout_marginTop="@dimen/v_30"
            android:layout_marginBottom="@dimen/v_21"
            android:text="@string/handle_task"
            />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_size" />

    <com.linyi.viva.extra.ui.weidgt.IconTextView
        android:id="@+id/reward_record"
        style="@style/item_setup"
        android:text="@string/reward_record"
        android:drawableLeft="@mipmap/ic_reward_record"
        android:drawableRight="@mipmap/ic_enter"
        />

    <com.linyi.viva.extra.ui.weidgt.IconTextView
        android:id="@+id/exchange_record"
        style="@style/item_setup"
        android:text="@string/exchange_record"
        android:drawableLeft="@mipmap/ic_recharge_record"
        android:drawableRight="@mipmap/ic_enter"
        />



</LinearLayout>
