<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/h_50"
        android:layout_marginRight="@dimen/h_50"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@color/white">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@mipmap/bg_sign_head"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/sign_uninterrupted"
                style="@style/wrap_wrap"
                android:textColor="@color/white"
                android:maxLines="2"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_15"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/h_30"
                android:text="@string/sign_uninterrupted"
                />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/day_container"
            android:layout_marginTop="@dimen/v_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:id="@+id/signed"
            style="@style/wrap_wrap"
            android:textColor="@color/signed_tips"
            android:text="@string/user_signed_today"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/v_30"
            />

        <TextView
            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/v_45"
            android:textColor="@color/white"
            android:background="@drawable/selector_primary_semicircle"
            android:gravity="center"
            android:text="@string/receive"
            android:textSize="@dimen/text_14"
            android:layout_margin="@dimen/h_20"/>

    </LinearLayout>

</FrameLayout>
